[package]
name = "polkadot-service"
version = "0.8.10"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
parking_lot = "0.9.0"
serde = { version = "1.0.102", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.8"
futures = "0.3.4"
slog = "2.5.2"
hex-literal = "0.2.1"
av_store = { package = "polkadot-availability-store", path = "../availability-store", optional = true }
consensus = { package = "polkadot-validation", path = "../validation", optional = true }
polkadot-primitives = { path = "../primitives" }
polkadot-runtime = { path = "../runtime/polkadot" }
kusama-runtime = { path = "../runtime/kusama" }
westend-runtime = { path = "../runtime/westend" }
polkadot-network = { path = "../network", optional = true }
polkadot-rpc = { path = "../rpc" }
sp-io = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-client-api = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-client-db = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-chain-spec = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-executor = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-consensus = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-network = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
consensus_common = { package = "sp-consensus", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
inherents = { package = "sp-inherents", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
service = { package = "sc-service", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-transaction-pool = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sp-transaction-pool = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sc-keystore = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
pallet-babe = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
pallet-staking = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
im-online = { package = "pallet-im-online", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
authority-discovery = { package = "sc-authority-discovery", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
authority-discovery-primitives = { package = "sp-authority-discovery", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
babe = { package = "sc-consensus-babe", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sp-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
system_rpc_runtime_api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
codec = { package = "parity-scale-codec", version = "1.3.0" }
sp-session = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
frame-benchmarking = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }

[dev-dependencies]
polkadot-test-runtime-client = { path = "../runtime/test-runtime/client" }
sc-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "increase-buffers-moar" }
env_logger = "0.7.0"

[features]
default = ["db", "full-node"]
db = ["service/db"]
runtime-benchmarks = ["polkadot-runtime/runtime-benchmarks", "kusama-runtime/runtime-benchmarks", "westend-runtime/runtime-benchmarks"]
full-node = ["av_store", "consensus", "polkadot-network"]
