[package]
name = "polkadot-statement-table"
version = "0.7.34-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
