[package]
name = "polkadot-validation"
version = "0.7.17"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
futures-timer = "2.0"
parking_lot = "0.9.0"
tokio = { version = "0.2.4", features = ["rt-core"] }
derive_more = "0.14.1"
log = "0.4.8"
exit-future = "0.2.0"
tokio-executor = { version = "0.2.0-alpha.6", features = ["blocking"] }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
availability_store = { package = "polkadot-availability-store", path = "../availability-store" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
table = { package = "polkadot-statement-table", path = "../statement-table" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
inherents = { package = "sp-inherents", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
consensus = { package = "sp-consensus", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
primitives = { package = "sp-core", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
sc-client-api = { git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
sp-timestamp = { git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
block-builder = { package = "sc-block-builder", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
trie = { package = "sp-trie", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
runtime_babe = { package = "pallet-babe", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
keystore = { package = "sc-keystore", git = "https://github.com/tomaka/polkadot", branch = "hack-2" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/tomaka/polkadot", branch = "hack-2" }
