[package]
name = "polkadot-validation"
version = "0.7.34-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
futures = "0.3.4"
futures-timer = "2.0"
parking_lot = "0.9.0"
tokio = { version = "0.2.13", features = ["rt-core", "blocking"] }
derive_more = "0.14.1"
log = "0.4.8"
exit-future = "0.2.0"
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
availability_store = { package = "polkadot-availability-store", path = "../availability-store" }
parachain = { package = "polkadot-parachain", path = "../parachain" }
polkadot-primitives = { path = "../primitives" }
polkadot-erasure-coding = { path = "../erasure-coding" }
table = { package = "polkadot-statement-table", path = "../statement-table" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
inherents = { package = "sp-inherents", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
consensus = { package = "sp-consensus", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
primitives = { package = "sp-core", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sp-api = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sc-client-api = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sp-timestamp = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
block-builder = { package = "sc-block-builder", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
trie = { package = "sp-trie", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
bitvec = { version = "0.17.4", default-features = false, features = ["alloc"] }
runtime_babe = { package = "pallet-babe", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
babe-primitives = { package = "sp-consensus-babe", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
keystore = { package = "sc-keystore", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sc-proposer-metrics = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
