[package]
name = "polkadot-network-test"
version = "0.8.0"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sc-network = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sc-service = { git = "https://github.com/tomaka/polkadot", features = ["test-helpers"], branch = "move-legacy-handshake" }
sc-network-test = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sp-consensus = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sc-client-api = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
sc-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "move-legacy-handshake" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
