[package]
name = "polkadot-network-test"
version = "0.8.10"
license = "GPL-3.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
log = "0.4.8"
parking_lot = "0.10.0"
futures = "0.3.1"
rand = "0.7.2"
sc-consensus = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
sc-network = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
sc-service = { git = "https://github.com/tomaka/polkadot", features = ["test-helpers"], branch = "async-std-1-6-2" }
sc-network-test = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
sp-consensus = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
sc-client-api = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
sp-blockchain = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
sp-core = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
sc-block-builder = { git = "https://github.com/tomaka/polkadot", branch = "async-std-1-6-2" }
polkadot-test-runtime-client = { path = "../../runtime/test-runtime/client" }
