[package]
name = "polkadot-client"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "cmichi-tmp-experiment" }

pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }

beefy-primitives = { git = "https://github.com/paritytech/grandpa-bridge-gadget", branch = "polkadot-v0.9.9" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot" }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../primitives" }

[features]
kusama = [ "kusama-runtime" ]
rococo = [ "rococo-runtime" ]
westend = [ "westend-runtime" ]
