[package]
name = "polkadot-client"
version = "0.9.12"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "ao-polkadot-v0.9.12-revert-9964" }

pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "ao-polkadot-v0.9.12-revert-9964" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../primitives" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
