[package]
name = "polkadot-client"
version = "0.9.13"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "kiz-temp" }

pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "kiz-temp" }

# Polkadot Runtimes
polkadot-runtime = { path = "../../runtime/polkadot", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
westend-runtime = { path = "../../runtime/westend", optional = true }
rococo-runtime = { path = "../../runtime/rococo", optional = true }

polkadot-primitives = { path = "../../primitives" }

[features]
default = ["polkadot"]
polkadot = ["polkadot-runtime"]
kusama = ["kusama-runtime"]
rococo = ["rococo-runtime"]
westend = ["westend-runtime"]
