[package]
name = "polkadot-node-metrics"
version = "0.9.9-1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
async-trait = "0.1.42"
futures = "0.3.15"
futures-timer = "3.0.2"

metered-channel = { path = "../metered-channel"}

sc-network = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "cmichi-tmp-experiment" }
