[package]
name = "polkadot-node-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
futures = "0.3.15"
polkadot-primitives = { path = "../../primitives" }
polkadot-statement-table = { path = "../../statement-table" }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
runtime_primitives = { package = "sp-runtime", git = "https://github.com/paritytech/substrate", default-features = false , branch = "bkchr-statemine-fix" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-consensus-vrf = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
sp-maybe-compressed-blob  = { git = "https://github.com/paritytech/substrate", branch = "bkchr-statemine-fix" }
polkadot-parachain = { path = "../../parachain", default-features = false }
schnorrkel = "0.9.1"
thiserror = "1.0.22"
tracing = "0.1.26"
serde = { version = "1.0.123", features = ["derive"] }

[target.'cfg(not(target_os = "unknown"))'.dependencies]
zstd = "0.6.0"
