[package]
name = "polkadot-runtime-common"
version = "0.7.19"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
bitvec = { version = "0.15.2", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
log = { version = "0.3.9", optional = true }
rustc-hex = { version = "2.0.1", default-features = false }
serde = { version = "1.0.102", default-features = false }
serde_derive = { version = "1.0.102", optional = true }

sp-api = { git = "https://github.com/tomaka/polkadot", branch = "probably-fix-perfs", default-features = false }
inherents = { package = "sp-inherents", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
rstd = { package = "sp-std", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
sp-io = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
sp-runtime = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
sp-staking = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
sp-core = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }

authorship = { package = "pallet-authorship", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
balances = { package = "pallet-balances", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
session = { package = "pallet-session", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
frame-support = { git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
staking = { package = "pallet-staking", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
system = { package = "frame-system", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
timestamp = { package = "pallet-timestamp", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }

primitives = { package = "polkadot-primitives", path = "../../primitives", default-features = false }
polkadot-parachain = { path = "../../parachain", default-features = false }

[dev-dependencies]
hex-literal = "0.2.1"
libsecp256k1 = "0.3.2"
tiny-keccak = "1.5.0"
keyring = { package = "sp-keyring", git = "https://github.com/tomaka/polkadot", branch = "probably-fix-perfs" }
sp-trie = { git = "https://github.com/tomaka/polkadot", branch = "probably-fix-perfs" }
babe = { package = "pallet-babe", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
pallet-staking-reward-curve = { git = "https://github.com/tomaka/polkadot", branch = "probably-fix-perfs" }
treasury = { package = "pallet-treasury", git = "https://github.com/tomaka/polkadot", default-features = false, branch = "probably-fix-perfs" }
trie-db = "0.18.0"
serde_json = "1.0.41"

[features]
default = []
no_std = []
std = [
	"bitvec/std",
	"primitives/std",
	"rustc-hex/std",
	"codec/std",
	"inherents/std",
	"sp-core/std",
	"polkadot-parachain/std",
	"sp-api/std",
	"rstd/std",
	"sp-io/std",
	"frame-support/std",
	"authorship/std",
	"balances/std",
	"sp-runtime/std",
	"sp-staking/std",
	"session/std",
	"staking/std",
	"system/std",
	"timestamp/std",
	"serde_derive",
	"serde/std",
	"log",
]
